<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@color/lightBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_txt"

        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/email_txt"
        android:textColor="@color/brown_black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/viewBelowEmail"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_40"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/password_txt"
        android:textColor="@color/brown_black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBelowEmail" />

    <View
        android:id="@+id/viewBelowPassword"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_40"
        android:background="@color/lightBlue"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <TextView
        android:id="@+id/tvUsePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_phone_number_txt"
        android:textColor="@color/lightBlue"
        android:textSize="@dimen/sp_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@color/gray_Light"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvUsePhone" />

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/forgot_password_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:text="Or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForget" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@color/fb"
        android:drawableStart="@drawable/logo_facebook"
        android:text="@string/continue_with_facebook_txt"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_50"
        android:background="@color/white"
        android:drawableStart="@drawable/google"
        android:text="@string/continue_with_google_txt"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        android:textColor="@color/brown_black"
        android:textSize="15sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>